feat!: replace tinacms with sveltia

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,22 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
+
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>	
 	</head>
 	<body>
 		<h1>Astro</h1>
+
+		<script>
+			if (window.netlifyIdentity) {
+				window.netlifyIdentity.on("init", (user) => {
+				if (!user) {
+					window.netlifyIdentity.on("login", () => {
+						document.location.href = "/admin/";
+					});
+				}
+				});
+			}
+		</script>
 	</body>
 </html>
