build: ts-ignore netlify init

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,8 @@
 	<body>
 		<h1>Astro</h1>
 
-		<script>
+		<script lang="typescript">
+			//@ts-ignore
 			if (window.netlifyIdentity) {
 				window.netlifyIdentity.on("init", (user) => {
 				if (!user) {
