--- a/src/layouts/layout-base.astro
+++ b/src/layouts/layout-base.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props
   </head>
   <body>
     <slot />
-    <script>
+    <script is:inline>
       //@ts-ignore
       if (window.netlifyIdentity) {
         window.netlifyIdentity.on("init", (user) => {
