feat!: add header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,6 @@ import LayoutBase from "../layouts/layout-base.astro"
 ---
 
 <LayoutBase title="Home">
-  <main>
-    <h1>Home</h1>
-    <p>Hello, World!</p>
-  </main>
+  <p>Welcome to the site!</p>
+  <p>Here I'll write blog posts and host whatever content my heart desires.</p>
 </LayoutBase>
