--- a/src/layouts/layout-base.astro
+++ b/src/layouts/layout-base.astro
@@ -1,4 +1,6 @@
 ---
+import Header from "../components/header.astro"
+
 interface Props {
   title: string
 }
@@ -16,8 +18,12 @@ const { title } = Astro.props
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"
     ></script>
   </head>
-  <body>
-    <slot />
+  <body class="bg-slate-900 min-h-svh text-blue-100">
+    <Header />
+    <main class="p-4 mx-auto max-w-screen-xl min-h-svh">
+      <slot />
+    </main>
+
     <script is:inline>
       //@ts-ignore
       if (window.netlifyIdentity) {
