fix: main column

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,7 +10,7 @@ const links: Array<{ href: string; text: string }> = [
     <h1 class="flex font-bold">
       <a href="/" class="flex items-center px-4"> <span>Wayne Van Son</span></a>
     </h1>
-    <nav class="my-2">
+    <nav class="my-2 mr-4">
       <ul class="flex gap-2">
         {
           links.map(({ href, text }) => (
