--- a/src/layouts/layout-base.astro
+++ b/src/layouts/layout-base.astro
@@ -18,9 +18,12 @@ const { title } = Astro.props
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"
     ></script>
   </head>
-  <body class="bg-slate-900 min-h-svh text-blue-100">
+  <body
+    class="flex flex-col justify-center bg-slate-900 min-h-svh text-blue-100"
+  >
     <Header />
-    <main class="p-4 mx-auto max-w-screen-xl min-h-svh">
+
+    <main class="flex-grow p-4 mx-auto w-full max-w-screen-xl bg-blue-950">
       <slot />
     </main>
 
