--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,7 +5,7 @@ const links: Array<{ href: string; text: string }> = [
 ]
 ---
 
-<header class="gap-2 bg-blue-900 text-blue-100">
+<header class="gap-2 text-blue-100">
   <div class="flex justify-between items-stretch max-w-screen-xl mx-auto">
     <h1 class="flex font-bold">
       <a href="/" class="flex items-center px-4"> <span>Wayne Van Son</span></a>
@@ -15,7 +15,10 @@ const links: Array<{ href: string; text: string }> = [
         {
           links.map(({ href, text }) => (
             <li>
-              <a href={href} class="px-4 py-2 block bg-blue-700 rounded-xl ">
+              <a
+                href={href}
+                class="px-4 py-2 block bg-gradient-to-tl from-blue-700 to-blue-900 rounded-xl border-2 border-transparent hover:border-blue-400"
+              >
                 {text}
               </a>
             </li>
