--- a/src/layouts/layout-base.astro
+++ b/src/layouts/layout-base.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props
   >
     <Header />
 
-    <main class="flex-grow p-4 mx-auto w-full max-w-screen-xl bg-blue-950">
+    <main class="flex-grow p-2 md:p-4 mx-auto w-full max-w-screen-xl">
       <slot />
     </main>
 
