feat!: move styles to be static

--- a/src/pages/blog/posts/[slug].astro
+++ b/src/pages/blog/posts/[slug].astro
@@ -3,6 +3,8 @@ import type { GetStaticPaths } from "astro"
 import { getCollection } from "astro:content"
 import LayoutBase from "../../../layouts/layout-base.astro"
 import { marked } from "marked"
+import * as cheerio from "cheerio"
+import type { HTMLTag } from "astro/types"
 
 interface Props {
   content: string
@@ -12,12 +14,36 @@ interface Props {
 }
 
 export const getStaticPaths: GetStaticPaths = async () => {
+  // Appends these classes to these elements
+  const styles: Partial<Record<HTMLTag, string>> = {
+    p: "py-2",
+    h1: "text-3xl",
+    h2: "text-2xl",
+    h3: "text-xl",
+    h4: "text-lg",
+    h5: "text-md",
+    h6: "text-sm",
+  }
+
+  async function markdownToHtml(markdown: string): Promise<string> {
+    const html = await marked(markdown)
+
+    const $ = cheerio.load(html)
+
+    for (const [tag, classes] of Object.entries(styles)) {
+      const elements = $(tag)
+      elements.attr("class", (attr) => attr + " " + classes)
+    }
+
+    return $.html()
+  }
+
   const posts = await getCollection("posts")
 
   const unresolved = posts.map(async (post) => ({
     params: { slug: post.slug },
     props: {
-      content: await marked(post.body),
+      content: await markdownToHtml(post.body),
       slug: post.slug,
       summary: post.data.summary,
       title: post.data.title,
@@ -32,20 +58,27 @@ const { content, summary, title } = Astro.props
 
 <LayoutBase title={title}>
   <article class="p-2">
-    <h1>{title}</h1>
-    <p>{summary}</p>
-    <div id="content" set:html={content} />
+    <h1 class="text-7xl">{title}</h1>
+    <small class="text-md">{summary}</small>
+    <div id="content" class="" set:html={content} />
   </article>
 </LayoutBase>
 
-<script>
+<!-- <script>
   import type { HTMLTag } from "astro/types"
 
+  // Appends these classes to these elements
   const styles: Partial<Record<HTMLTag, string>> = {
-    p: "p-10",
-    h2: "text-xl",
+    p: "py-2",
+    h1: "text-3xl",
+    h2: "text-2xl",
+    h3: "text-xl",
+    h4: "text-lg",
+    h5: "text-md",
+    h6: "text-sm",
   }
 
+  // how to do this on the server?
   const content = document.querySelector("#content")
 
   for (const [tag, classes] of Object.entries(styles)) {
@@ -55,4 +88,4 @@ const { content, summary, title } = Astro.props
       element.classList.add(classes)
     }
   }
-</script>
+</script> -->
