--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,3 +1,23 @@
 ---
-
+const footerLinks: Array<{ href: string; text: string }> = [
+  { href: "/", text: "Home" },
+  { href: "/blog", text: "Blog" },
+  { href: "/admin/index.html", text: "Admin Portal" },
+]
 ---
+
+<footer class="gap-2 mb-4 text-blue-100">
+  <div class="flex justify-between items-stretch max-w-screen-xl mx-auto">
+    <ul>
+      {
+        footerLinks.map(({ href, text }) => (
+          <li>
+            <a href={href} class="p-2">
+              {text}
+            </a>
+          </li>
+        ))
+      }
+    </ul>
+  </div>
+</footer>
