--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,11 +1,11 @@
 ---
-const links: Array<{ href: string; text: string }> = [
+const headerLinks: Array<{ href: string; text: string }> = [
   { href: "/", text: "Home" },
   { href: "/blog", text: "Blog" },
 ]
 ---
 
-<header class="gap-2 text-blue-100">
+<header class="sticky gap-2 bg-slate-900 text-blue-100">
   <div class="flex justify-between items-stretch max-w-screen-xl mx-auto">
     <h1 class="flex font-bold">
       <a href="/" class="flex items-center px-4"> <span>Wayne Van Son</span></a>
@@ -13,11 +13,11 @@ const links: Array<{ href: string; text: string }> = [
     <nav class="my-2 mr-4">
       <ul class="flex gap-2">
         {
-          links.map(({ href, text }) => (
+          headerLinks.map(({ href, text }) => (
             <li>
               <a
                 href={href}
-                class="px-4 py-2 block bg-gradient-to-tl from-blue-700 to-blue-900 rounded-xl border-2 border-transparent hover:border-blue-400"
+                class="px-4 py-2 block rounded-xl border-2 border-transparent hover:border-blue-400"
               >
                 {text}
               </a>
