--- a/src/layouts/layout-base.astro
+++ b/src/layouts/layout-base.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/footer.astro"
 import Header from "../components/header.astro"
 
 interface Props {
@@ -19,13 +20,15 @@ const { title } = Astro.props
     ></script>
   </head>
   <body
-    class="flex flex-col justify-center bg-slate-900 min-h-svh text-blue-100"
+    class="flex flex-col justify-center bg-slate-700 min-h-svh text-blue-100"
   >
     <Header />
 
     <main class="flex-grow p-2 md:p-4 mx-auto w-full max-w-screen-xl">
       <slot />
     </main>
+
+    <Footer />
 
     <script is:inline>
       //@ts-ignore
